# Eadro

./: .dockerignore  .gitignore  CLI_USAGE.md  Dockerfile  OPTIMIZATION_README.md  README.md  cli.py  client.py  config.py  config.toml  create_dataset.py  data_adapter.py  docker-compose.hawkes.yml  drain.ini  logs  main.py  pyproject.toml  settings.toml  train.py  utils.py  模型输入输出及数据适配计划.md
codes/: base.py  main.py  model.py  utils.py
codes/preprocess/: align.py  single_process.py  util.py
data/: drain_templates
hawkes_service/: Dockerfile  hawkes_server.py  requirements.txt
src/eadro/: base.py  config.py  data_adapter.py  eadro_handlers.py  experiment_manager.py  experiment_sdk.py  handlers.py  hawkes_client.py  model.py  progress_manager.py  utils.py
src/exp/: config.py  controller.py
src/preprocessing/: base.py  log.py  processor.py  utils.py
src/preprocessing/parsers/: log.py
