[project]
name = "eadro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "drain3>=0.9.11",
    "fastparquet>=2024.11.0",
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "pyarrow>=20.0.0",
    "ruff>=0.12.0",
    "scikit-learn>=1.7.0",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
]
