[project]
name = "eadro"
version = "0.1.0"
requires-python = ">=3.12"
description = "Add your description here"
readme = "README.md"
dependencies = [
    "drain3>=0.9.11",
    "fastparquet",
    "numpy",
    "pandas",
    "pyarrow",
    "rich>=13.0.0",
    "ruff",
    "scikit-learn",
    "torch==2.4.0",
    "tqdm",
    "dgl",
    "typer>=0.16.0",
]
[tool.uv.sources]
dgl = { url = "https://data.dgl.ai/wheels/torch-2.4/dgl-2.4.0-cp312-cp312-manylinux1_x86_64.whl" }
torch = { url = "https://download.pytorch.org/whl/cpu-cxx11-abi/torch-2.4.0%2Bcpu.cxx11.abi-cp312-cp312-linux_x86_64.whl" }
